--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   dev:
-    image: #docker image (e.g., node:latest)
+    image: node:latest
     stdin_open: true
     tty: true
     container_name: dev-container
